--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <meta name="keywords" content=""/>
         <meta name="description" content=""/>
         <meta name="author" content=""/>
-        <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="">
+        <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="">
 
         <title> ShinzoFamily </title>
 
