--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <meta name="author" content=""/>
         <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="">
 
-        <title> ShinzoFamily </title>
+        <title> {{ home.title }} </title>
 
         <!-- bootstrap core css -->
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}"/>
@@ -54,7 +54,7 @@
                 <nav class="navbar navbar-expand-lg custom_nav-container ">
                     <a class="navbar-brand" href="">
             <span>
-              ShinzoFamily
+              {{ home.title }}
             </span>
                     </a>
 
@@ -68,7 +68,8 @@
                         <ul class="navbar-nav  ">
 
                             <li class="nav-item">
-                                <a class="nav-link" href="jahongir/"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                                <a class="nav-link" href="jahongir/"> <i class="fa fa-user" aria-hidden="true"></i>
+                                    Login</a>
                             </li>
 
                         </ul>
@@ -87,14 +88,10 @@
                                 <div class="col-md-6 ">
                                     <div class="detail-box">
                                         <h1>
-                                            Crypto <br>
-                                            Currency
+                                            {{ home.name }}
                                         </h1>
                                         <p>
-                                            Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam
-                                            fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat
-                                            molestias, veniam, vel architecto veritatis delectus repellat modi impedit
-                                            sequi.
+                                            {{ home.description }}
                                         </p>
                                         <div class="btn-box">
                                             <a href="jahongir/" class="btn1">
@@ -131,11 +128,9 @@
             <div class="container ">
                 <div class="heading_container heading_center">
                     <h2>
-                        Our <span>Services</span>
+                        <span></span>
                     </h2>
                     <p>
-                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration
                     </p>
                 </div>
                 <div class="row">
@@ -146,16 +141,16 @@
                             </div>
                             <div class="detail-box">
                                 <h5>
-                                    Currency Wallet
+                                    {#                                    Currency Wallet#}
                                 </h5>
                                 <p>
-                                    fact that a reader will be distracted by the readable content of a page when looking
-                                    at its layout.
-                                    The
-                                    point of using
+                                    {#                                    fact that a reader will be distracted by the readable content of a page when looking#}
+                                    {#                                    at its layout.#}
+                                    {#                                    The#}
+                                    {#                                    point of using#}
                                 </p>
                                 <a href="">
-                                    Read More
+                                    {#                                    Read More#}
                                 </a>
                             </div>
                         </div>
@@ -167,16 +162,16 @@
                             </div>
                             <div class="detail-box">
                                 <h5>
-                                    Security Storage
+                                    {#                                    Security Storage#}
                                 </h5>
                                 <p>
-                                    fact that a reader will be distracted by the readable content of a page when looking
-                                    at its layout.
-                                    The
-                                    point of using
+                                    {#                                    fact that a reader will be distracted by the readable content of a page when looking#}
+                                    {#                                    at its layout.#}
+                                    {#                                    The#}
+                                    {#                                    point of using#}
                                 </p>
                                 <a href="">
-                                    Read More
+                                    {#                                    Read More/#}
                                 </a>
                             </div>
                         </div>
@@ -188,16 +183,16 @@
                             </div>
                             <div class="detail-box">
                                 <h5>
-                                    Expert Support
+                                    {#                                    Expert Support#}
                                 </h5>
                                 <p>
-                                    fact that a reader will be distracted by the readable content of a page when looking
-                                    at its layout.
-                                    The
-                                    point of using
+                                    {#                                    fact that a reader will be distracted by the readable content of a page when looking#}
+                                    {#                                    at its layout.#}
+                                    {#                                    The#}
+                                    {#                                    point of using#}
                                 </p>
                                 <a href="">
-                                    Read More
+                                    {#                                    Read More#}
                                 </a>
                             </div>
                         </div>
@@ -218,41 +213,50 @@
                 <div class="col-md-6 col-lg-3 info_col">
                     <div class="info_contact">
                         <h4>
-                            Address
+                            Contacts
                         </h4>
                         <div class="contact_link_box">
                             <a href="">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                                 <span>
-                  Location
+                  {{ home.address }}
                 </span>
                             </a>
                             <a href="">
                                 <i class="fa fa-phone" aria-hidden="true"></i>
                                 <span>
-                  Call +01 1234567890
+                  {{ home.phone }}
                 </span>
                             </a>
                             <a href="">
                                 <i class="fa fa-envelope" aria-hidden="true"></i>
                                 <span>
-                  demo@gmail.com
+                  {{ home.email }}
                 </span>
                             </a>
                         </div>
                     </div>
                     <div class="info_social">
-                        <a href="">
+                        <a href="{{ home.facebook }}">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
-                        <a href="">
+                        <a href="{{ home.twitter }}">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                         </a>
-                        <a href="">
+                        <a href="{{ about.linkedin_link }}">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                         </a>
-                        <a href="">
+                        <a href="{{ home.instagram }}">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                        <a href="{{ home.website }}">
+                            <i class="fa fa-globe" aria-hidden="true"></i>
+                        </a>
+                        <a href="{{ about.github_link }}">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+                        </a>
+                        <a href="{{ home.telegram }}">
+                            <i class="fa fa-telegram" aria-hidden="true"></i>
                         </a>
                     </div>
                 </div>
@@ -262,8 +266,7 @@
                             Info
                         </h4>
                         <p>
-                            necessary, making this the first true generator on the Internet. It uses a dictionary of
-                            over 200 Latin words, combined with a handful
+                            {{ about.info }}
                         </p>
                     </div>
                 </div>
@@ -273,20 +276,20 @@
                             Links
                         </h4>
                         <div class="info_links">
-                            <a class="active" href="index.html">
-                                Home
+                            <a class="active" href="{{ about.resume_link }}">
+                                Resume
                             </a>
-                            <a class="" href="about.html">
-                                About
+                            <a class="" href="{{ about.github_link }}">
+                                GitHub
                             </a>
-                            <a class="" href="service.html">
-                                Services
+                            <a class="" href="{{ about.telegram_link }}">
+                                Telegram
                             </a>
-                            <a class="" href="why.html">
-                                Why Us
+                            <a class="" href="{{ about.instagram_link }}">
+                                Instagram
                             </a>
-                            <a class="" href="team.html">
-                                Team
+                            <a class="" href="{{ about.portfolio_link }}">
+                                PORTFOLIO
                             </a>
                         </div>
                     </div>
@@ -295,10 +298,11 @@
                     <h4>
                         Subscribe
                     </h4>
-                    <form action="#">
-                        <input type="text" placeholder="Enter email"/>
+                    <form method="post">
+                        {% csrf_token %}
+                        {{ form.useremail }}
                         <button type="submit">
-                            Subscribe
+                            Yuborish
                         </button>
                     </form>
                 </div>
@@ -313,7 +317,7 @@
         <div class="container">
             <p>
                 &copy; <span id="displayYear"></span> All Rights Reserved By
-                <a href="https://html.design/">Free Html Templates</a>
+                <a href="https://html.design/">{{ home.title }}</a>
             </p>
         </div>
     </section>
