--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@
                     <div class="col-md-4 ">
                         <div class="box ">
                             <div class="img-box">
-                                <img src="images/s1.png" alt="">
+                                <img src="{% static 'images/s1.png' %}" alt="">
                             </div>
                             <div class="detail-box">
                                 <h5>
@@ -158,7 +158,7 @@
                     <div class="col-md-4 ">
                         <div class="box ">
                             <div class="img-box">
-                                <img src="images/s2.png" alt="">
+                                <img src="{% static 'images/s2.png' %}" alt="">
                             </div>
                             <div class="detail-box">
                                 <h5>
@@ -179,7 +179,7 @@
                     <div class="col-md-4 ">
                         <div class="box ">
                             <div class="img-box">
-                                <img src="images/s3.png" alt="">
+                                <img src="{% static 'images/s3.png' %}" alt="">
                             </div>
                             <div class="detail-box">
                                 <h5>
@@ -317,7 +317,7 @@
         <div class="container">
             <p>
                 &copy; <span id="displayYear"></span> All Rights Reserved By
-                <a href="https://html.design/">{{ home.title }}</a>
+                <a href="/">{{ home.title }}</a>
             </p>
         </div>
     </section>
